--- a/index.html
+++ b/index.html
@@ -134,30 +134,28 @@
                 <div class="testCircleWrapper">
                     <div class="testCircle"></div>
                 </div>-->
-
                 <div id="header-left">
                     <div class="imgBox">
                         <div class="darkCircle"></div>
                         <div class="brightCircle"></div>
-                        <img src="src/frederiklowQSquare.jpg">
+                        <!-- <img src="src/frederiklowQSquare.jpg"> -->
+                        <img src="src/IMG_3825.JPG">
                     </div>
 
                     <div class="header-leftBG"></div>
                     <div class="header-leftBG2"></div>
                 </div>
-                <div id="header-right" class="sectionWrapper">
+                <div id="header-right">
                     <div id="header_headlineWrapper" class="fromBottomWrapper">
                         <div class="titleSubtitle">
-                            <div class="subTitle">
-                                <p>Physiotherapeut</p>
-                            </div>
                             <h1>Frederik Weber</h1>
+                            <div class="subTitle">
+                                <div class="line"></div>
+                                <p>Heilpraktiker für Physiotherapie </p>
+                            </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <button class="moreButton">
-                            <p class="testi">mehr erfahren</p>
-                            <div class="icon"><i class="fa-solid fa-arrow-right"></i></div>
-                        </button>
+                        <p class="quote">„In der Liebe zum Ganzen tritt das Individuelle in Erscheinung.“ – Krishnamurti</p>
+                        <button>mehr erfahren</button>
 
 
                         <div class="headerItemWrapper">
@@ -180,13 +178,23 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
 
     <div id="content">
         <div id="physioHelpsWrapper" class="opacityReveal">
-            <div class="sectionImagePadding">
+            <div class="sectionWrapper tast">
+                <p>Ein herzliches Hallo!<br> Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
+                <p>Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.</p>
+                <p>Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.</p><br>
+                <p>Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
+            </div>
+
+
+
+            <!--<div class="sectionImagePadding">
                 <div class="sectionImage"></div>
             </div>
             <div class="physioHelps sectionWrapper">
@@ -218,7 +226,7 @@
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <section id="newLeistungenWrapper">
             <div class="newLeistungen sectionWrapper">
@@ -228,8 +236,7 @@
                             <h2>Unsere</h2>
                             <h5>Anwendungen</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                         <button class="justAButton">mehr erfahren</button>
                     </div>
                 </div>
