--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+
+    <!-- ANFÜHRUNGSZEICHEN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&display=swap" rel="stylesheet">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -136,10 +143,11 @@
                 </div>-->
                 <div id="header-left">
                     <div class="imgBox">
+                        <img src="src/IMG_3825.JPG">
                         <div class="darkCircle"></div>
                         <div class="brightCircle"></div>
                         <!-- <img src="src/frederiklowQSquare.jpg"> -->
-                        <img src="src/IMG_3825.JPG">
+                        <!-- <img src="src/IMG_3825edit.webp">-->
                     </div>
 
                     <div class="header-leftBG"></div>
@@ -186,16 +194,16 @@
     <div id="content">
         <div id="greetings" class="opacityReveal">
             <div class="leftBox">
-                <p>Ein herzliches Hallo!<br> Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
-                <p>Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.</p>
-                <p>Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.</p><br>
-                <p>Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
+
+
             </div>
             <div class="rightBox">
 
-                <div class="pictureCard pictureCardTwo"><img src="src/contactImage.JPG" width="100%" height="100%"></div>
-                <div class="pictureCard pictureCardOne"><img src="src/aboutMe.jpg" width="100%" height="100%"></div>
-                <div class="pictureCard pictureCardThree"><img src="src/aboutMe.jpg" width="100%" height="100%"></div>
+                <h2>Ein herzliches Hallo!</h2>
+                <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
+                <p>Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.</p>
+                <p>Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.</p><br>
+                <p>Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
             </div>
         </div>
 
@@ -366,6 +374,54 @@
 
     </div>
 
+    <section id="rezensionen">
+        <div class="rezension">
+            <div class="rezension-top">
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+            </div>
+            <div class="rezension-middle">
+                <div class="zitat">"</div>
+                <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                </p>
+            </div>
+            <div class="rezension-bottom">Sabrina</div>
+        </div>
+        <div class="rezension">
+            <div class="rezension-top">
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+            </div>
+            <div class="rezension-middle">
+                <div class="zitat">"</div>
+                <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                </p>
+            </div>
+            <div class="rezension-bottom">Sabrina</div>
+        </div>
+        <div class="rezension">
+            <div class="rezension-top">
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                <div class="sterne"><img src="src/star.svg" width="100%"></div>
+            </div>
+            <div class="rezension-middle">
+                <div class="zitat">"</div>
+                <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                </p>
+            </div>
+            <div class="rezension-bottom">Sabrina</div>
+        </div>
+    </section>
+
     <section id="contactWrapper">
         <div id="contact">
             <div class="contactHeadline">
@@ -452,6 +508,7 @@
         </div>
     </section>
 
+
     <div id="physioHelpsWrapper" class="opacityReveal">
         <div class="sectionImagePadding">
             <div class="sectionImage"></div>
@@ -508,7 +565,6 @@
         </div>
 
     </section>
-    </div>
     <div class="backToTop"><i class="fa-solid fa-angle-up"></i></div>
 
     <script>
