--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 </head>
 
 <body>
-
     <div class="loader-wrapper">
         <div class="loadImageWrapper">
             <div class="blueDots">
@@ -127,7 +126,6 @@
                 </div>
             </div>
             <div id="header_inner">
-
                 <!--<div class="anotherBox">
                     <img src="src/frederikEditLowQSquare.png" width="100%">
                 </div>-->
@@ -144,6 +142,7 @@
                 <div id="header-left">
                     <div class="imgBox">
                         <img src="src/IMG_3825.JPG">
+                        <!--<img src="../../Gemini_Generated_Image_2lzy5c2lzy5c2lzy.png">-->
                         <div class="darkCircle"></div>
                         <div class="brightCircle"></div>
                         <!-- <img src="src/frederiklowQSquare.jpg"> -->
@@ -244,7 +243,8 @@
             </div> -->
     </div>
     <section id="newLeistungenWrapper">
-        <div class="newLeistungen sectionWrapper">
+        <div class="newAbsolute"></div>
+        <div class="newLeistungen">
             <div class="newLeistungenLeft">
                 <div class="newLeistungenLeftInner">
                     <div class="titleSubtitle">
@@ -256,61 +256,70 @@
             </div>
             <div class="newLeistungenRight">
                 <div class="leistungenRightGrid">
-                    <div class="newLeistungen-card opacityReveal">
-                        <img src="src/behandlung.jpg">
-                        <div class="newLeistungen-cardText">
-                            <div class="newLeistungen-cardTextHeadline">
-                                <div class="iconi">
-                                    <img src="src/run.svg">
+                    <div class="newLeistungen-offGrid starAnimation">
+                        <div class="newLeistungen-card cardUp opacityReveal">
+                            <img src="src/behandlung.jpg">
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">
+                                    <div class="iconi">
+                                        <img src="src/running.png">
+                                    </div>
+                                    <h3><i>Vielseitige<br>
+                                            Therapieverfahren</i></h3>
                                 </div>
-                                <h3><i>Vielseitige<br>
-                                        Therapieverfahren</i></h3>
+                                <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                             </div>
-                            <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                         </div>
                     </div>
-                    <div class="newLeistungen-card opacityReveal">
-                        <img src="src/training2.jpg">
-                        <div class="newLeistungen-cardText">
-                            <div class="newLeistungen-cardTextHeadline">
-                                <div class="iconi">
-                                    <img src="src/running.png">
+                    <div class="newLeistungen-offGrid">
+                        <div class="newLeistungen-card cardDown opacityReveal">
+                            <img src="src/training2.jpg">
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">
+                                    <div class="iconi">
+                                        <img src="src/running.png">
+                                    </div>
+                                    <h3><i>Professionelle<br>
+                                            Fitnessberatung</i></h3>
                                 </div>
-                                <h3><i>Professionelle<br>
-                                        Fitnessberatung</i></h3>
+                                <p>• Erstellung von Fitnessplänen<br>
+                                    • gemeinsames Training<br>
+                                    • Personal Training<br></p>
                             </div>
-                            <p>• Erstellung von Fitnessplänen<br>
-                                • gemeinsames Training<br>
-                                • Personal Training<br></p>
                         </div>
                     </div>
 
-                    <div class="newLeistungen-card opacityReveal">
-                        <img src="src/anatomie.JPG">
-                        <div class="newLeistungen-cardText">
-                            <div class="newLeistungen-cardTextHeadline">
-                                <div class="iconi">
-                                    <img src="src/running.png">
+                    <div class="newLeistungen-offGrid">
+                        <div class="newLeistungen-card cardUp opacityReveal">
+                            <img src="src/anatomie.JPG">
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">
+                                    <div class="iconi">
+                                        <img src="src/running.png">
+                                    </div>
+                                    <h3><i>Effektives<br>
+                                            Coaching</i></h3>
                                 </div>
-                                <h3><i>Effektives<br>
-                                        Coaching</i></h3>
+                                <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
                             </div>
-                            <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
                         </div>
                     </div>
-                    <div class="newLeistungen-card opacityReveal">
-                        <img src="src/frederikEditLowQ.jpg">
-                        <div class="newLeistungen-cardText">
-                            <div class="newLeistungen-cardTextHeadline">
 
-                                <div class="iconi">
+                    <div class="newLeistungen-offGrid">
+                        <div class="newLeistungen-card cardDown opacityReveal">
+                            <img src="src/frederikEditLowQ.jpg">
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">
 
+                                    <div class="iconi">
+
+                                    </div>
+                                    <h3><i>Effektives<br>
+                                            Coaching</i></h3>
                                 </div>
-                                <h3><i>Effektives<br>
-                                        Coaching</i></h3>
-                            </div>
-                            <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
+                                <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
 
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -375,7 +384,7 @@
     </div>
 
     <section id="rezensionen">
-        <div class="rezension">
+        <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" class="rezension">
             <div class="rezension-top">
                 <div class="sterne"><img src="src/star.svg" width="100%"></div>
                 <div class="sterne"><img src="src/star.svg" width="100%"></div>
@@ -388,8 +397,11 @@
                 <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
                 </p>
             </div>
-            <div class="rezension-bottom">Sabrina</div>
-        </div>
+            <div class="rezension-bottom">
+                <p>Sabrina</p>
+                <p>vor 3 Monaten</p>
+            </div>
+        </a>
         <div class="rezension">
             <div class="rezension-top">
                 <div class="sterne"><img src="src/star.svg" width="100%"></div>
