--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="newLeistungenLeft">
                 <div class="newLeistungenLeftInner">
                     <div class="titleSubtitle">
-                        <h5>Ganzheitlich & individuell</h5>
+                        <h5>Ganzheitlich<br>& individuell</h5>
                     </div>
                     <p>Vielseitige Therapieverfahren, Effektives Coaching und Fitnessberatung bilden die Basis meiner Arbeit. Darauf aufbauend erstelle ich ein individuelles Behandlungskonzept, das sich speziell nach Ihren Bedürfnissen richtet. </p>
                     <button>mehr erfahren</button>
@@ -256,73 +256,65 @@
             </div>
             <div class="newLeistungenRight">
                 <div class="leistungenRightGrid">
-                    <div class="newLeistungen-offGrid starAnimation">
-                        <div class="newLeistungen-card cardUp opacityReveal">
-                            <img src="src/behandlung.jpg">
-                            <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">
-                                    <div class="iconi">
-                                        <img src="src/running.png">
-                                    </div>
-                                    <h3><i>Vielseitige<br>
-                                            Therapieverfahren</i></h3>
+                    <div class="newLeistungen-card cardUp">
+                        <img src="src/behandlung.jpg">
+                        <div class="newLeistungen-cardText">
+                            <div class="newLeistungen-cardTextHeadline">
+                                <div class="iconi">
+                                    <img src="src/running.png">
                                 </div>
-                                <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
+                                <h3><i>Vielseitige<br>
+                                        Therapieverfahren</i></h3>
                             </div>
+                            <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                         </div>
                     </div>
-                    <div class="newLeistungen-offGrid">
-                        <div class="newLeistungen-card cardDown opacityReveal">
-                            <img src="src/training2.jpg">
-                            <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">
-                                    <div class="iconi">
-                                        <img src="src/running.png">
-                                    </div>
-                                    <h3><i>Professionelle<br>
-                                            Fitnessberatung</i></h3>
+                    <div class="newLeistungen-card cardDown">
+                        <img src="src/training2.jpg">
+                        <div class="newLeistungen-cardText">
+                            <div class="newLeistungen-cardTextHeadline">
+                                <div class="iconi">
+                                    <img src="src/running.png">
                                 </div>
-                                <p>• Erstellung von Fitnessplänen<br>
-                                    • gemeinsames Training<br>
-                                    • Personal Training<br></p>
+                                <h3><i>Professionelle<br>
+                                        Fitnessberatung</i></h3>
                             </div>
+                            <p>• Erstellung von Fitnessplänen<br>
+                                • gemeinsames Training<br>
+                                • Personal Training<br></p>
                         </div>
                     </div>
-
-                    <div class="newLeistungen-offGrid">
-                        <div class="newLeistungen-card cardUp opacityReveal">
-                            <img src="src/anatomie.JPG">
-                            <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">
-                                    <div class="iconi">
-                                        <img src="src/running.png">
-                                    </div>
-                                    <h3><i>Effektives<br>
-                                            Coaching</i></h3>
+                    <div class="newLeistungen-card cardUp">
+                        <img src="src/anatomie.JPG">
+                        <div class="newLeistungen-cardText">
+                            <div class="newLeistungen-cardTextHeadline">
+                                <div class="iconi">
+                                    <img src="src/running.png">
                                 </div>
-                                <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
+                                <h3><i>Effektives<br>
+                                        Coaching</i></h3>
                             </div>
+                            <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
                         </div>
                     </div>
 
-                    <div class="newLeistungen-offGrid">
-                        <div class="newLeistungen-card cardDown opacityReveal">
-                            <img src="src/frederikEditLowQ.jpg">
-                            <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">
+                    <div class="newLeistungen-card cardDown">
+                        <img src="src/frederikEditLowQ.jpg">
+                        <div class="newLeistungen-cardText">
+                            <div class="newLeistungen-cardTextHeadline">
 
-                                    <div class="iconi">
+                                <div class="iconi">
 
-                                    </div>
-                                    <h3><i>Effektives<br>
-                                            Coaching</i></h3>
                                 </div>
-                                <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
-
+                                <h3><i>Effektives<br>
+                                        Coaching</i></h3>
                             </div>
+                            <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
+
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -384,53 +376,116 @@
     </div>
 
     <section id="rezensionen">
-        <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" class="rezension">
-            <div class="rezension-top">
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-            </div>
-            <div class="rezension-middle">
-                <div class="zitat">"</div>
-                <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
-                </p>
-            </div>
-            <div class="rezension-bottom">
-                <p>Sabrina</p>
-                <p>vor 3 Monaten</p>
-            </div>
-        </a>
-        <div class="rezension">
-            <div class="rezension-top">
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-            </div>
-            <div class="rezension-middle">
-                <div class="zitat">"</div>
-                <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
-                </p>
-            </div>
-            <div class="rezension-bottom">Sabrina</div>
-        </div>
-        <div class="rezension">
-            <div class="rezension-top">
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-                <div class="sterne"><img src="src/star.svg" width="100%"></div>
-            </div>
-            <div class="rezension-middle">
-                <div class="zitat">"</div>
-                <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
-                </p>
-            </div>
-            <div class="rezension-bottom">Sabrina</div>
+        <div class="rezensionenSlider">
+            <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" target="_blank" class="rezension">
+                <div class="rezension-top">
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                </div>
+                <div class="rezension-middle">
+                    <div class="zitat">"</div>
+                    <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                    </p>
+                </div>
+                <div class="rezension-bottom">
+                    <p>Sabrina</p>
+                    <p>vor 3 Monaten</p>
+                </div>
+            </a>
+            <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" target="_blank" class="rezension">
+                <div class="rezension-top">
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                </div>
+                <div class="rezension-middle">
+                    <div class="zitat">"</div>
+                    <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                    </p>
+                </div>
+                <div class="rezension-bottom">
+                    <p>Sabrina</p>
+                    <p>vor 3 Monaten</p>
+                </div>
+            </a>
+            <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" target="_blank" class="rezension">
+                <div class="rezension-top">
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                </div>
+                <div class="rezension-middle">
+                    <div class="zitat">"</div>
+                    <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                    </p>
+                </div>
+                <div class="rezension-bottom">
+                    <p>Sabrina</p>
+                    <p>vor 3 Monaten</p>
+                </div>
+            </a>
+
+            <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" target="_blank" class="rezension">
+                <div class="rezension-top">
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                </div>
+                <div class="rezension-middle">
+                    <div class="zitat">"</div>
+                    <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                    </p>
+                </div>
+                <div class="rezension-bottom">
+                    <p>Sabrina</p>
+                    <p>vor 3 Monaten</p>
+                </div>
+            </a>
+            <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" target="_blank" class="rezension">
+                <div class="rezension-top">
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                </div>
+                <div class="rezension-middle">
+                    <div class="zitat">"</div>
+                    <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                    </p>
+                </div>
+                <div class="rezension-bottom">
+                    <p>Sabrina</p>
+                    <p>vor 3 Monaten</p>
+                </div>
+            </a>
+            <a href="https://maps.app.goo.gl/5vo38hpVQ7MyLNAm9" target="_blank" class="rezension">
+                <div class="rezension-top">
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                    <div class="sterne"><img src="src/star.svg" width="100%"></div>
+                </div>
+                <div class="rezension-middle">
+                    <div class="zitat">"</div>
+                    <p>Ich war bei Hr. Weber nach meinem Soortunfall. Hr. Webers Behandlungen halfen mir sehr und beschleunigten merklich den Handlungsverlauf. Er beachtet den Körper als Ganzes und gibt auch Tipps für zuhause mit. Ich kann ihn jederzeit vorbehaltlos weiterempfehlen!
+                    </p>
+                </div>
+                <div class="rezension-bottom">
+                    <p>Sabrina</p>
+                    <p>vor 3 Monaten</p>
+                </div>
+            </a>
         </div>
     </section>
 
