--- a/index.html
+++ b/index.html
@@ -190,25 +190,33 @@
         </div>
     </div>
 
-    <div id="content">
-        <div id="greetings" class="opacityReveal">
-            <div class="leftBox">
+    <div id="greetings" class="opacityReveal">
+        <h2>Ein herzliches Hallo!</h2>
+        <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
+        <p>Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.</p>
+        <p>Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.</p><br>
+        <p>Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
+    </div>
 
-
-            </div>
-            <div class="rightBox">
-
-                <h2>Ein herzliches Hallo!</h2>
-                <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
-                <p>Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.</p>
-                <p>Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.</p><br>
-                <p>Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
+    <section class="praxis">
+        <div class="right-container fromBottomWrapper">
+            <div><img src="src/behandlung.jpg"></div>
+            <div><img src="src/behandlung.jpg"></div>
+            <div><img src="src/behandlung.jpg"></div>
+            <div><img src="src/behandlung.jpg"></div>
+        </div>
+        <div class="left-container">
+            <div class="leftInner fromBottomWrapper">
+                <h5>Die Praxis</h5>
+                <p>Meine Praxis in Bolanden ist das Zentrum meiner Arbeit.</p>
+                <p>Aber auch darüber hinaus sehe ich mich als Wegbegleiter.</p>
+                <p>So durfte ich bereits bei mehreren Turnieren und Wettkämpfen hautnah dabei sein und meine Patienten dabei unterstützen das Beste aus sich herauszuholen. </p>
+                <p><img src="/Users/renebohn/Downloads/location.png" width="100%"></p>
             </div>
         </div>
+    </section>
 
-
-
-        <!--<div class="sectionImagePadding">
+    <!--<div class="sectionImagePadding">
                 <div class="sectionImage"></div>
             </div>
             <div class="physioHelps sectionWrapper">
@@ -241,7 +249,6 @@
                     </div>
                 </div>
             </div> -->
-    </div>
     <section id="newLeistungenWrapper">
         <div class="newAbsolute"></div>
         <div class="newLeistungen">
@@ -261,7 +268,7 @@
                         <div class="newLeistungen-cardText">
                             <div class="newLeistungen-cardTextHeadline">
                                 <div class="iconi">
-                                    <img src="src/running.png">
+                                    <img src="/Users/renebohn/Documents/Projekte/Frederik Weber Physio Design/phone.png">
                                 </div>
                                 <h3><i>Vielseitige<br>
                                         Therapieverfahren</i></h3>
@@ -374,6 +381,7 @@
         </div>
 
     </div>
+
 
     <section id="rezensionen">
         <div class="rezensionenSlider">
