--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <p>Meine Praxis in Bolanden ist das Zentrum meiner Arbeit.</p>
                 <p>Aber auch darüber hinaus sehe ich mich als Wegbegleiter.</p>
                 <p>So durfte ich bereits bei mehreren Turnieren und Wettkämpfen hautnah dabei sein und meine Patienten dabei unterstützen das Beste aus sich herauszuholen. </p>
-                <p><img src="/Users/renebohn/Downloads/location.png" width="100%"></p>
+                <p><img class="icono" src="/Users/renebohn/Downloads/location.png" width="100%"></p>
             </div>
         </div>
         <div class="right-container fromBottomWrapper">
