--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <section class="praxis">
         <div class="left-container">
-            <div class="leftInner fromBottomWrapper">
+            <div class="leftInner moving-box fromBottomWrapper">
                 <h5>Die Praxis</h5>
                 <p>Meine Praxis in Bolanden ist das Zentrum meiner Arbeit.</p>
                 <p>Aber auch darüber hinaus sehe ich mich als Wegbegleiter.</p>
@@ -209,6 +209,7 @@
             </div>
         </div>
         <div class="right-container fromBottomWrapper">
+            <div class="empty"></div>
             <div><img src="src/behandlung.jpg"></div>
             <div><img src="src/behandlung.jpg"></div>
             <div><img src="src/behandlung.jpg"></div>
