--- a/index.html
+++ b/index.html
@@ -199,20 +199,25 @@
     </div>
 
     <section class="praxis">
+        <div class="praxisBackground"></div>
         <div class="left-container">
-            <div class="leftInner moving-box fromBottomWrapper">
+            <div class="leftInner">
                 <h5>Die Praxis</h5>
                 <p>Meine Praxis in Bolanden ist das Zentrum meiner Arbeit.</p>
                 <p>Aber auch darüber hinaus sehe ich mich als Wegbegleiter.</p>
                 <p>So durfte ich bereits bei mehreren Turnieren und Wettkämpfen hautnah dabei sein und meine Patienten dabei unterstützen das Beste aus sich herauszuholen. </p>
-                <p><img class="icono" src="/Users/renebohn/Downloads/location.png" width="100%"></p>
+
+                <div class="adresse">
+                    <img class="icono" src="/Users/renebohn/Downloads/location.png" width="100%">
+                    <p>Bolandern-Weierhof</p>
+
+
+                </div>
             </div>
         </div>
         <div class="right-container fromBottomWrapper">
-            <div class="empty"></div>
             <div><img src="src/behandlung.jpg"></div>
-            <div><img src="src/behandlung.jpg"></div>
-            <div><img src="src/behandlung.jpg"></div>
+            <div class="toTheSide"><img src="src/behandlung.jpg"></div>
             <div><img src="src/behandlung.jpg"></div>
         </div>
     </section>
