--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <p>So durfte ich bereits bei mehreren Turnieren und Wettkämpfen hautnah dabei sein und meine Patienten dabei unterstützen das Beste aus sich herauszuholen. </p>
 
                 <div class="adresse">
-                    <img class="icono" src="/Users/renebohn/Downloads/location.png" width="100%">
+                    <img class="icono" src="src/location.png" width="100%">
                     <p>Bolandern-Weierhof</p>
 
 
